# AntBot

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README.txt  antbot.bash  package.xml  setup.py
MatLab_files/: AntBotII_leg1_forwardKin.m  AntBotII_leg2_forwardKin.m  AntBotII_leg4_forwardKin.m  AntBotII_leg6_forwardKin.m  antbotII_leg2_inverse.m  antbotII_leg3_inversekin.m  antbotII_oneleg_inversekin.m  antbotII_trajectory_planning_leg1.slx  antbotII_trajectory_planning_leg2.slx
Matlab/: AntBotII_leg1_forwardKin.m  antbotII_oneleg_inversekin.m
RPI_part/antbot/: CMakeLists.txt
Webots/: hexapod.wbt
Webots/hexapod/: locomotion.py
dns_arduino_controller/: README.md  platformio.ini
dns_arduino_controller/.pioenvs/: .sconsign.dblite  structure.hash
dns_arduino_controller/src/: IMU_sensor.cpp  IMU_sensor.h  IR_sensor.cpp  IR_sensor.h  (+11 more)
dns_main/: CMakeLists.txt  package.xml
launch/: antbot.launch  sherlock_ants.launch
msg/: Dynamixel_array.msg
old_version/: Tactiles.py  kinematics.py  ramp.py  walking_gaits.py
reb_src/: control_interface.py  dynamixel_library.py  kinematics.py  main.py  my_main.py  parallel.py  pressure.py  print_kinematics.py  reb_main.py  reb_rotation.py  rotation.py  rotx.py  slave.py  smartwalk.py  stupid_walk.py  trajectory.py  walking_gaits.py
src/: camera_neck.py  dynamics.py  dynamixel_library.py  joystick_map_node.py  kf_pub.py  kf_sub.py  kinematics.py  kinematicsnew.py  kinematicssupernew.py  main.py  mainnew.py  master.py  pressure.py  pub_tactile.py  rotation.py  slave.py  stupid_walk.py  sub_tactile.py  torque.py
(+78 files in other folders)
