<?xml version="1.0"?>
<package format="2">
  <name>antbot</name>
  <version>1.0.0</version>
  <description>The antbot package</description>

  <maintainer email="Accidentalyo@gmail.com">eugeneswag</maintainer>

  <license>MIT</license>


  <!-- <url type="website">http://wiki.ros.org/sherlock_ants</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ps3joy</build_depend>
  <build_export_depend>dynamixel_controllers</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ps3joy</build_export_depend>
  <exec_depend>dynamixel_controllers</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ps3joy</exec_depend>


  <export>

  </export>
</package>
